add tabindex to all grid rows

--- a/src/templates/ui-grid/uiGridViewport.html
+++ b/src/templates/ui-grid/uiGridViewport.html
@@ -5,6 +5,7 @@
   <div
     class="ui-grid-canvas">
     <div
+      tabindex="0"
       ng-repeat="(rowRenderIndex, row) in rowContainer.renderedRows track by $index"
       class="ui-grid-row"
       ng-style="Viewport.rowStyle(rowRenderIndex)">
