dont toggle menu chevrons

--- a/src/templates/ui-grid/uiGridHeaderCell.html
+++ b/src/templates/ui-grid/uiGridHeaderCell.html
@@ -43,8 +43,7 @@
     ui-grid-one-bind-aria-label="i18n.headerCell.aria.columnMenuButtonLabel"
     aria-haspopup="true">
     <div ng-show="grid.options.enableSorting" class="ui-grid-column-menu">
-      <i ng-show="col.sort.direction == asc" class="fa fa-chevron-down" aria-hidden="true"></i>
-      <i ng-show="col.sort.direction == desc" class="fa fa-chevron-up" aria-hidden="true"></i>
+      <i class="fa fa-chevron-down" aria-hidden="true"></i>
     </div>
   </div>
 
